--- a/about.html
+++ b/about.html
@@ -8,6 +8,11 @@
   <script defer src="js/main.js"></script>
 </head>
 <body>
+  <div class="bg-orbs">
+    <div class="orb orb1"></div>
+    <div class="orb orb2"></div>
+    <div class="orb orb3"></div>
+  </div>
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="index.html">
