products added init

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <section class="hero fade-up">
       <div class="container hero-grid">
         <div class="hero-text fade-up">
-          <h1>Precision-engineered auto spare parts<br/><span>BUILT FOR INFINITY, CRAFTED WITH QUALITY</span></h1>
-          <p>OEM-grade components for passenger vehicles, commercial fleets and industrial applications. Minimal tolerances. Maximum reliability.</p>
+          <h1>Powering Innovation with Magnetic Precision<br/><span>BUILT FOR INFINITY, CRAFTED WITH QUALITY</span></h1>
+          <p>We design and supply high-performance permanent magnets and precision magnetic assemblies. Built for durability, efficiency, and innovation-driven industries. Empowering manufacturing with the strength of magnetic excellence.</p>
           <div class="hero-ctas">
             <a href="products.html" class="btn">View Products</a>
             <a href="contact.html" class="btn ghost">Get in touch</a>
@@ -63,18 +63,18 @@
     <section class="features container fade-up">
       <div class="feature">
         <img src="img/quality.svg" alt="" />
-        <h3>Quality Assured</h3>
-        <p>ISO-grade processes and rigorous QC on every batch.</p>
+        <h3>Magnet Quality</h3>
+        <p>Engineered with high-performance materials.</p>
       </div>
       <div class="feature">
         <img src="img/precision.svg" alt="" />
-        <h3>Precision Manufacturing</h3>
-        <p>CNC machined and balanced to OEM tolerances.</p>
+        <h3>Precision Magnetics</h3>
+        <p>Expertly crafted magnetic assemblies for diverse industries.</p>
       </div>
       <div class="feature">
         <img src="img/support.svg" alt="" />
-        <h3>Technical Support</h3>
-        <p>Design support and documentation for engineers and buyers.</p>
+        <h3>Dedicated Support</h3>
+        <p>Ensuring the best magnetic solutions for your needs.</p>
       </div>
     </section>
 
