--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </div>
         </div>
         <div class="hero-art fade-up">
-          <img src="img/hero-illustration.svg" alt="Auto parts illustration" />
+          <img src="img/tractmotor.jpg" alt="Auto parts illustration" style="border:5px solid rgba(11,17,36,0.06); border-radius:var(--radius);" />
         </div>
       </div>
     </section>
@@ -78,16 +78,16 @@
       </div>
     </section>
 
-    <section class="preview-products container fade-up">
+    <!-- <section class="preview-products container fade-up">
       <div class="section-header">
         <h2>Featured Products</h2>
         <p>A quick look at a few of our core offerings.</p>
       </div>
-      <div class="product-grid" id="featured-grid"></div>
+      <div class="product-grid container" id="featured-grid"></div>
       <div class="more-link">
         <a href="products.html" class="btn ghost">See all products</a>
       </div>
-    </section>
+    </section> -->
 
     <section class="testimonials container fade-up">
       <blockquote>
@@ -101,7 +101,7 @@
     <div class="container footer-grid">
       <div>
         <h4>Infinity Auto Comp</h4>
-        <p>Precision auto spare parts manufacturer.</p>
+        <p>Leading supplier of magnets and magnetic assemblies.</p>
       </div>
       <div>
         <h4>Contact</h4>
