--- a/products.html
+++ b/products.html
@@ -25,7 +25,7 @@
         <a href="index.html" class="nav-link">Home</a>
         <a href="about.html" class="nav-link">About</a>
         <a href="products.html" class="nav-link active">Products</a>
-        <a href="contact.html" class="nav-link">Contact</a>
+        <a href="contact.html" class="nav-link cta">Contact</a>
       </nav>
     </div>
   </header>
@@ -42,28 +42,28 @@
     <!-- Product Grid -->
     <section class="product-grid container" style="display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:2rem; padding:2rem 1rem;">
       <div class="card">
-        <img src="img/product-disc.svg" alt="NdFeB Magnet" style="width:80px; margin:auto; display:block;">
+        <img src="img/ndfeb.jpg" alt="NdFeB Magnet" style="width:200px; margin:auto; display:block;">
         <h3>NdFeB Magnet</h3>
         <p>High-strength Neodymium-Ferrum-Boron magnets offering exceptional energy density and performance for advanced assemblies.</p>
       </div>
       <div class="card">
-        <img src="img/product-arm.svg" alt="Ferrite Magnet" style="width:80px; margin:auto; display:block;">
+        <img src="img/ferrite.jpg" alt="Ferrite Magnet" style="width:200px; margin:auto; display:block;">
         <h3>Ferrite Magnet</h3>
         <p>Reliable and cost-effective magnets with strong resistance to demagnetization, ideal for motors and sensors.</p>
       </div>
       <div class="card">
-        <img src="img/product-mount.svg" alt="SmCo Magnet" style="width:80px; margin:auto; display:block;">
+        <img src="img/smco.jpg" alt="SmCo Magnet" style="width:200px; margin:auto; display:block;">
         <h3>SmCo Magnet</h3>
         <p>Samarium–Cobalt magnets designed for high-temperature stability and corrosion resistance in demanding environments.</p>
       </div>
       <div class="card">
-        <img src="img/product-pulley.svg" alt="AlNiCo Magnet" style="width:80px; margin:auto; display:block;">
+        <img src="img/ainico.jpg" alt="AlNiCo Magnet" style="width:200px; margin:auto; display:block;">
         <h3>AlNiCo Magnet</h3>
         <p>Aluminum–Nickel–Cobalt magnets known for excellent temperature tolerance and consistent magnetic field strength.</p>
       </div>
       <div class="card">
-        <img src="img/product-rod.svg" alt="Magnetic Assemblies" style="width:80px; margin:auto; display:block;">
-        <h3>Magnetic Assemblies</h3>
+        <img src="img/magass.jpg" alt="Magnetic Assemblies" style="width:200px; margin:auto; display:block;">
+        <h3>Related Assemblies</h3>
         <p>Customized magnetic assemblies integrating precision components for efficient motion and sensing applications.</p>
       </div>
     </section>
