--- a/contact.html
+++ b/contact.html
@@ -103,12 +103,12 @@
     <div class="container footer-grid">
       <div>
         <h4>Infinity Auto Comp</h4>
-        <p>Precision auto spare parts manufacturer.</p>
+        <p>Leading supplier of magnets and magnetic assemblies.</p>
       </div>
       <div>
         <h4>Contact</h4>
         <p>Email: <a href="mailto:infinityautocomp1@gmail.com">infinityautocomp1@gmail.com</a></p>
-        <p>Phone: <a href="tel:+918044012533">+91 80440 12533</a></p>
+        <p>Phone: <a href="tel:+918044012533">+91 80440 12533<br/>+91 89836 75608</a></p>
       </div>
       <div>
         <h4>Quick Links</h4>
