--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div>
         <h4>Contact</h4>
         <p>Email: <a href="mailto:infinityautocomp1@gmail.com">infinityautocomp1@gmail.com</a></p>
-        <p>Phone: <a href="tel:+918044012533">+91 80440 12533</a></p>
+        <p>Phone: <a href="tel:+918044012533">+91 80440 12533<br/>+91 89836 75608</a></p>
       </div>
       <div>
         <h4>Quick Links</h4>
