--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
         </p>
         <p>
           Email: <a href="mailto:infinityautocomp1@gmail.com">infinityautocomp1@gmail.com</a><br/>
-          Phone: <a href="tel:+918044012533">+91 80440 12533</a>
+          Phone: <a href="tel:+918983675608">+91 89836 75608  , </a><a href="tel:+919921491027">+91 99214 91027</a>
         </p>
 
         <div class="map-placeholder fade-up">
@@ -108,7 +108,11 @@
       <div>
         <h4>Contact</h4>
         <p>Email: <a href="mailto:infinityautocomp1@gmail.com">infinityautocomp1@gmail.com</a></p>
-        <p>Phone: <a href="tel:+918044012533">+91 80440 12533<br/>+91 89836 75608</a></p>
+        <p>
+          Phone:
+          <a href="tel:+918044012533" class="phone-link">+91 99214 91027 ,</a>
+          <a href="tel:+918983675608" class="phone-link">+91 89836 75608</a>
+        </p>
       </div>
       <div>
         <h4>Quick Links</h4>
