--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
       </div>
     </section> -->
 
-    <section class="testimonials container fade-up">
+    <!-- <section class="testimonials container fade-up">
       <blockquote>
         <p>"Consistent quality and on-time delivery — a partner we can rely on."</p>
         <cite>— Fleet Manager, Orion Logistics</cite>
       </blockquote>
-    </section>
+    </section> -->
   </main>
 
   <footer class="site-footer fade-up">
@@ -106,7 +106,11 @@
       <div>
         <h4>Contact</h4>
         <p>Email: <a href="mailto:infinityautocomp1@gmail.com">infinityautocomp1@gmail.com</a></p>
-        <p>Phone: <a href="tel:+918044012533">+91 80440 12533<br/>+91 89836 75608</a></p>
+        <p>
+          Phone:
+          <a href="tel:+918044012533" class="phone-link">+91 99214 91027 ,</a>
+          <a href="tel:+918983675608" class="phone-link">+91 89836 75608</a>
+        </p>
       </div>
       <div>
         <h4>Quick Links</h4>
