--- a/products.html
+++ b/products.html
@@ -38,6 +38,12 @@
         Infinity Auto Comp brings precision-engineered magnetic products trusted by industries for efficiency, durability, and innovation.
       </p>
     </section>
+    
+    <div style="text-align:center; margin-top:2.5rem;">
+      <a href="doc/infinity-catelogue.pdf" target="_blank" class="btn-catalogue">
+        View Complete Catalogue
+      </a>
+    </div>
 
     <!-- Product Grid -->
     <section class="product-grid container" style="display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:2rem; padding:2rem 1rem;">
@@ -107,6 +113,12 @@
           </div>
         </div>
       </div>
+      <!-- View Catalogue Button -->
+      <div style="text-align:center; margin-top:2.5rem;">
+        <a href="doc/infinity-catelogue.pdf" target="_blank" class="btn-catalogue">
+          View Complete Catalogue
+        </a>
+      </div>
     </section>
 
 
@@ -143,7 +155,11 @@
       <div>
         <h4>Contact</h4>
         <p>Email: <a href="mailto:infinityautocomp1@gmail.com">infinityautocomp1@gmail.com</a></p>
-        <p>Phone: <a href="tel:+918044012533">+91 80440 12533<br/>+91 89836 75608</a></p>
+        <p>
+          Phone:
+          <a href="tel:+918044012533" class="phone-link">+91 99214 91027 ,</a>
+          <a href="tel:+918983675608" class="phone-link">+91 89836 75608</a>
+        </p>
       </div>
       <div>
         <h4>Quick Links</h4>
