--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
         <div class="form-actions">
           <button class="btn" type="submit">Send Message</button>
         </div>
-        <p class="form-note">This form is a demo; integrate a backend or email provider for production.</p>
+        <p class="form-note">This form is under production. We'll update soon.</p>
       </form>
 
       <div class="contact-info fade-up">
@@ -78,7 +78,7 @@
         <p>
           Infinity Auto Comp<br/>
           Ground Floor, Block G,<br/>
-          Shramdeep Housing Society, Sambhaji Nagar,<br/>
+          Shramdeep Society, Sambhaji Nagar,<br/>
           Near Ganesh Temple, MIDC Chinchwad Pune,<br/>
           Pimpri Chinchwad-411019,<br/>
           Maharashtra, India
