--- a/about.html
+++ b/about.html
@@ -44,47 +44,13 @@
 
   <main class="container about-page">
     <section class="about-hero fade-up">
-      <h1>We craft components that keep vehicles moving</h1>
-      <p>Founded with a focus on engineering excellence, Infinity Auto Comp blends traditional manufacturing with modern QA and materials science to deliver parts that perform under stress.</p>
+      <h1>We engineer magnetic solutions that power modern innovation</h1>
+      <p>Driven by precision and performance, Infinity Auto Comp specializes in high-grade NdFeB, Ferrite, SmCo, and AlNiCo magnets — combining advanced materials, tight tolerance manufacturing, and rigorous quality assurance to meet global industry standards.</p>
     </section>
-
     <section class="timeline fade-up">
       <div class="timeline-item">
-        <h3>Our Mission</h3>
-        <p>To provide reliable, high-performance spare parts that add real value across the supply chain.</p>
-      </div>
-      <div class="timeline-item">
-        <h3>Capabilities</h3>
-        <ul>
-          <li>CNC machining & turning</li>
-          <li>Heat treatment & surface finishing</li>
-          <li>Dimensional inspection & testing</li>
-        </ul>
-      </div>
-      <div class="timeline-item">
-        <h3>Quality & Certifications</h3>
-        <p>Processes designed to meet international automotive standards (add certifications here).</p>
-      </div>
-    </section>
-
-    <section class="team fade-up">
-      <h2>Leadership</h2>
-      <div class="team-grid">
-        <div class="card fade-up">
-          <img src="img/person-1.svg" alt="Founder" />
-          <h4>Rohit Sharma</h4>
-          <p>Founder & CEO — 15+ years in automotive supply chain and manufacturing.</p>
-        </div>
-        <div class="card fade-up">
-          <img src="img/person-2.svg" alt="Head of Engineering" />
-          <h4>Anjali Mehta</h4>
-          <p>Head of Engineering — Expert in materials & precision machining.</p>
-        </div>
-        <div class="card fade-up">
-          <img src="img/person-3.svg" alt="Head of Ops" />
-          <h4>Vikram Rao</h4>
-          <p>Operations Lead — Specialises in scale manufacturing & QC.</p>
-        </div>
+        <h3>About Us</h3>
+        <p>At Infinity Auto Comp, we specialize in the design, manufacturing, and supply of high-performance industrial magnets engineered for precision, reliability, and durability. With a strong focus on innovation and quality, we deliver advanced magnetic solutions that cater to diverse industrial applications—from automotive and electronics to automation and renewable energy. Our commitment to excellence, backed by cutting-edge technology and stringent quality standards, ensures that every product we deliver meets global performance benchmarks. We take pride in supporting our clients with custom-engineered magnet solutions that drive efficiency, sustainability, and long-term value.</p>
       </div>
     </section>
   </main>
